<resources>
    <string name="app_name">PracticaTema6PMDM</string>
    <string name="textNotas" />
    <string name="blocNotas">Bloc de notas</string>
    <string name="personas">Personas</string>
    <string name="llamar">Llamar</string>
    <string name="correo">Correo</string>
    <string name="editar">Editar</string>
    <string name="EditarPersonas">Editar personas</string>
    <string name="textViewEditar">Pulse sobre una imagen para seleccionarla</string>
    <string name="primeraImagen">Usted ha seleccionado la primera imagen</string>
    <string name="SegundaImagen">Usted ha seleccionado la segunda imagen</string>
    <string name="TerceraImagen">Usted ha seleccionado la tercera imagen</string>
    <string name="CuartaImagen">Usted ha seleccionado la cuarta imagen</string>
    <string name="QuintaImagen">Usted ha seleccionado la quinta imagen</string>
    <string name="SextaImagen">Usted ha seleccionado la sexta imagen</string>
    <string name="textViewDatos">A continuación introduzca los datos:</string>
    <string name="introducir_correo">Introduzca aquí el correo</string>
    <string name="introducir_telefono">Introduzca aquí el teléfono</string>
    <string name="act_datos">Actualizar datos</string>
    <string name="confirmacionBoton">Se ha insertado los datos correctamente</string>
</resources>
