<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarPersonas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEditar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="onClick1"
            app:srcCompat="@drawable/persona1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="onClick2"
            app:srcCompat="@drawable/persona2" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="onClick3"
            app:srcCompat="@drawable/persona3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="137dp"
            android:layout_height="100dp"
            android:onClick="onClick4"
            app:srcCompat="@drawable/persona4" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="onClick5"
            app:srcCompat="@drawable/persona6" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="onClick6"
            app:srcCompat="@drawable/persona7" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDatos" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introducir_telefono"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introducir_correo"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_datos" />

</LinearLayout>